--- a/nav-app/src/app/app.component.html
+++ b/nav-app/src/app/app.component.html
@@ -2,7 +2,7 @@
     <div class="app-container">
         <div class="nav-app">
             <tabs (onUserThemeChange)="themeChangeHandler($event)" [userTheme]="user_theme"></tabs>
-            <button class="version-footer" (click)="tabsComponent.openDialog('changelog')">MITRE ATT&CK&reg; Navigator
+            <button class="version-footer" (click)="tabsComponent.openDialog('changelog')">DISARM Navigator
                 v{{nav_version}}</button>
         </div>
     </div>
