--- a/nav-app/src/app/version-upgrade/version-upgrade.component.html
+++ b/nav-app/src/app/version-upgrade/version-upgrade.component.html
@@ -3,8 +3,8 @@
         <h3 mat-dialog-title>Upgrade layer version?</h3>
         <mat-dialog-content>
             <p>
-                The layer "{{layerName}}" uses an outdated version of ATT&CK (v{{vmVersion}}).
-                Do you want to open the workflow to upgrade this layer to ATT&CK v{{currVersion}}?
+                The layer "{{layerName}}" uses an outdated version of DISARM (v{{vmVersion}}).
+                Do you want to open the workflow to upgrade this layer to DISARM v{{currVersion}}?
                 <em *ngIf="!this.dataService.isSupported(vmVersion)">
                     This version is not supported by Navigator v{{nav_version}} and must be upgraded for use.
                 </em>
